--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,8 +34,11 @@ services:
     image: grafana/grafana:latest
     container_name: monitoring-tools-grafana
     restart: unless-stopped
-    env_file:
-      - ./.env
+    environment:
+      - GF_SERVER_DOMAIN=localhost:3004
+      - GF_SERVER_ROOT_URL=http://localhost:3004
+      - GF_SECURITY_ADMIN_PASSWORD=
+      - GF_SERVE_FROM_SUB_PATH=false
     ports:
       - '3004:3000'
     volumes:
