--- a/prometheus/prometheus.example.yaml
+++ b/prometheus/prometheus.example.yaml
@@ -3,15 +3,13 @@ global:
   evaluation_interval: 1m
 
 scrape_configs:
-  - job_name: prometheus
-    static_configs:
-      - targets: ['prometheus:9090']
-  - job_name: backend 
+  - job_name: rvt-ct-http-server 
     metrics_path: /prometheus
     static_configs:
       - targets:
-        - backend:8088
-  - job_name: 'kafka_exporter'
-    metrics_path: /metrics
+        - rvt-ct-http-server:8088
+  - job_name: rvt-ab-http-server 
     static_configs:
-      - targets: ['kafka-exporter:9308']
+      - targets:
+        - rvt-ab-http-server:8088
+ 
